<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ShowEditUserActivity"
    android:background="@color/colorTwo">
    <RelativeLayout
        android:id="@+id/editUserSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <RelativeLayout
            android:id="@+id/textsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/labelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:text="@string/name"
                android:layout_below="@+id/labelName"/>
            <TextView
                android:id="@+id/labelUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/username"
                android:layout_below="@+id/textName"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:text="@string/username"
                android:layout_below="@+id/labelUsername"/>
            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/email"
                android:layout_below="@+id/textUsername"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:text="@string/email"
                android:layout_below="@+id/labelEmail" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:text="@string/username"
                android:layout_below="@+id/edtName"
                android:layout_marginTop="8dp"/>
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:text="@string/email"
                android:layout_below="@+id/edtUsername"
                android:layout_marginTop="8dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/formContainer"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorBlack"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/btnSave"/>
            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_delete"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/initialActionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/formContainer">
            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editUser"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true"/>
            <Button
                android:id="@+id/btnHideUserDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hideUserDetails"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentEnd="true"/>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>
    <Button
        android:id="@+id/btnShowUserDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="210dp"
        android:maxHeight="60dp"
        android:text="@string/showUserDetails"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorThree"
        app:tabTextColor="@color/colorBlack"
        app:tabSelectedTextColor="@color/colorWhite"
        android:layout_below="@+id/editUserSection"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorThree"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/tabs" />
</RelativeLayout>